Adding resposive effect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-    <diV style="width: 700px;">
+    <diV style="width: 100%;">
         <div id="main" style="width:100%; min-height: 600px; margin: 10px"></div>
     </diV>
     <label>Choose a type:</label>
