Having isssues with witdh and height of echarts instance

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-    <diV style="width: 100%; max-width: 900px;">
-        <div id="main" style="width:100%; min-height: 600px; margin: 10px"></div>
+    <diV style="width: 100%; max-width: 900px; height : 700px">
+        <div id="main" style="width:100%; height: 100%; margin: 10px"></div>
     </diV>
     <label>Choose a type:</label>
     <select type="string" [(ngModel)]="currentType" (ngModelChange)="changeType()">
