--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,11 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-    <diV style="width: 100%; max-width: 900px; height : 600px">
-        <div id="main" style="width:100%; height: 100%; margin: 10px"></div>
-    </diV>
+    <div style="height:600px;">
+        <diV style="width: 100%; max-width: 900px; height:100%; max-height: 600px;">
+            <div id="main" style="width:100%; height: 100%; margin: 10px"></div>
+        </diV>
+    </div>
     <label>Choose a type:</label>
     <select type="string" [(ngModel)]="currentType" (ngModelChange)="changeType()">
       <option *ngFor="let type of types" [ngValue]="type">{{type}}</option>
