Final version of tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,10 @@
     <select type="string" [(ngModel)]="currentData" (ngModelChange)="changeData()">
       <option *ngFor="let data of datas" [ngValue]="data">{{data}}</option>
     </select>
+
+    <div id="main2" style="width: 140px; height: 167px;">
+
+    </div>
 <!--<div id="main2" style="width: 600px; min-height: 500px; margin: 70px"></div>
 <data>
     <abscisse>
